--- a/max_num_vehicles_in_cases.ipynb
+++ b/max_num_vehicles_in_cases.ipynb
@@ -2,58 +2,106 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "ed7fbbfc",
+   "execution_count": 26,
+   "id": "4d945b88",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "5b4ad9de",
+   "execution_count": 51,
+   "id": "972b6376",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_largest_id(Dtype,n):\n",
-    "    tracks_np = pd.read_csv(\"testcases/%(Dtype)s/cases/%(n)03d_testcases.csv\" %{'Dtype':Dtype,'n':n}).values\n",
-    "    return tracks_np[-1][0]"
+    "    case_id=1\n",
+    "    max=0\n",
+    "    while(os.path.exists(\"testcases/%(Dtype)s/cases/%(n)02d/%(case_id)03d_testcases.csv\" %{'Dtype':Dtype,'n':n,'case_id':case_id})):\n",
+    "        path=\"testcases/%(Dtype)s/cases/%(n)02d/%(case_id)03d_testcases.csv\" %{'Dtype':Dtype,'n':n,'case_id':case_id}\n",
+    "        tracks_np = pd.read_csv(path).values\n",
+    "        if(max<tracks_np[-1][0]):\n",
+    "            max=tracks_np[-1][0]\n",
+    "        case_id+=1\n",
+    "    print(\"%(n)d:%(max)d\" %{'n':n,'max':max})\n",
+    "    return max"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "19d1e5f3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "max=0\n",
-    "for n in range(1,17):\n",
-    "    cur=get_largest_id(\"inD\",n)\n",
-    "    if cur>max:\n",
-    "        max=cur"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "b64103a2",
+   "execution_count": 52,
+   "id": "2ab1fdc7",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0:26\n",
+      "1:24\n",
+      "2:29\n",
+      "3:24\n",
+      "4:22\n",
+      "5:22\n",
+      "6:29\n",
+      "7:22\n",
+      "8:24\n",
+      "9:21\n",
+      "10:24\n",
+      "11:25\n",
+      "12:28\n",
+      "13:22\n",
+      "14:27\n",
+      "15:22\n",
+      "16:25\n",
+      "17:26\n",
+      "18:23\n",
+      "19:23\n",
+      "20:29\n",
+      "21:27\n",
+      "22:30\n",
+      "23:26\n",
+      "24:24\n",
+      "25:27\n",
+      "26:28\n",
+      "27:22\n",
+      "28:27\n",
+      "29:24\n",
+      "30:30\n",
+      "31:27\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "26.0"
+       "30.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "max=0\n",
+    "for n in range(32):\n",
+    "    cur=get_largest_id(\"inD\",n)\n",
+    "    if cur>max:\n",
+    "        max=cur\n",
+    "max"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c71490a8",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "max"
    ]
@@ -61,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "9db4e831",
+   "id": "be280a65",
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c49f6c0f",
+   "id": "00a0de29",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "42f3dc0f",
+   "id": "6a600419",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "29f6c00d",
+   "id": "8d86497e",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbbf9045",
+   "id": "b73a0925",
    "metadata": {},
    "outputs": [],
    "source": [
