process single cases according to classes

--- a/data_process_timegan/single_case/single_vehicle_data.ipynb
+++ b/data_process_timegan/single_case/single_vehicle_data.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "bf24c6ef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "\u001b[1;31mImportError: /home/rzhou/miniconda3/lib/python3.11/lib-dynload/_sqlite3.cpython-311-x86_64-linux-gnu.so: undefined symbol: sqlite3_deserialize. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -59,19 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "a8651930",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"/DATA1/rzhou/ika/single_testcases/%(Dtype)s_single.csv\" %{'Dtype':Dtype}, \"w\") as f_single:\n",
-    "    f_single.truncate(0)\n",
-    "    f_single.write(\"trackID,x,y\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "bdad9317",
    "metadata": {},
    "outputs": [
@@ -79,23 +78,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
       "18\n",
       "19\n",
       "20\n",
@@ -107,48 +89,17 @@
       "26\n",
       "27\n",
       "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n",
-      "38\n",
-      "39\n",
-      "40\n",
-      "41\n",
-      "42\n",
-      "43\n",
-      "44\n",
-      "45\n",
-      "46\n",
-      "47\n",
-      "48\n",
-      "49\n",
-      "50\n",
-      "51\n",
-      "52\n",
-      "53\n",
-      "54\n",
-      "55\n",
-      "56\n",
-      "57\n",
-      "58\n",
-      "59\n",
-      "60\n"
+      "29\n"
      ]
     }
    ],
    "source": [
     "cur_id_single=0\n",
-    "Dtype=\"highD\"\n",
-    "with open(\"/DATA1/rzhou/ika/single_testcases/%(Dtype)s_single.csv\" %{'Dtype':Dtype}, \"w\") as f_single:\n",
+    "Dtype=\"inD\"\n",
+    "with open(\"/DATA1/rzhou/ika/single_testcases/%(Dtype)s_single_18-29.csv\" %{'Dtype':Dtype}, \"w\") as f_single:\n",
     "    f_single.truncate(0)\n",
     "    f_single.write(\"trackID,x,y\\n\")\n",
-    "for n in range(1,61):\n",
+    "for n in range(18,30):\n",
     "    print(n)\n",
     "    trackId_list=[]\n",
     "    with open(\"/DATA1/rzhou/ika/%(Dtype)s/data/%(n)02d_tracksMeta.csv\" %{'Dtype':Dtype,'n':n}, mode='r') as f_tracksMeta:\n",
@@ -166,7 +117,7 @@
     "            # row是一个列表，包含了当前行的所有数据\n",
     "    #print(trackId_list) \n",
     "\n",
-    "    with open(\"/DATA1/rzhou/ika/single_testcases/%(Dtype)s_single.csv\" %{'Dtype':Dtype}, \"a\") as f_single,\\\n",
+    "    with open(\"/DATA1/rzhou/ika/single_testcases/%(Dtype)s_single_18-29.csv\" %{'Dtype':Dtype}, \"a\") as f_single,\\\n",
     "    open(\"/DATA1/rzhou/ika/%(Dtype)s/data/%(n)02d_tracks.csv\" %{'Dtype':Dtype,'n':n}, mode='r') as f_tracks:\n",
     "        # 创建csv.reader对象\n",
     "        tracks_dict_reader = csv.DictReader(f_tracks)\n",
@@ -202,7 +153,68 @@
    "id": "7bb96933",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cur_id_single=0\n",
+    "Dtype=\"inD\"\n",
+    "\n",
+    "if Dtype==\"highD\":\n",
+    "    vclasses=[\"car\", \"bicycle\", \"pedestrian\", \"truck_bus\"]\n",
+    "else:\n",
+    "    vclasses=[\"Car\", \"Truck\"]\n",
+    "    \n",
+    "for vc in vclasses:    \n",
+    "    with open(\"/DATA1/rzhou/ika/single_testcases/%(Dtype)s_single_18-29_%(vc)s.csv\" %{'Dtype':Dtype,'vc':vc}, \"w\") as f_single:\n",
+    "        f_single.truncate(0)\n",
+    "        f_single.write(\"trackID,x,y\\n\")\n",
+    "        \n",
+    "for n in range(18,30):\n",
+    "    print(n)\n",
+    "    for vc in vclasses:\n",
+    "        trackId_list=[]\n",
+    "        with open(\"/DATA1/rzhou/ika/%(Dtype)s/data/%(n)02d_tracksMeta.csv\" %{'Dtype':Dtype,'n':n}, mode='r') as f_tracksMeta:\n",
+    "            # 创建csv.DictReader对象\n",
+    "            tracksMeta_dict_reader = csv.DictReader(f_tracksMeta)\n",
+    "            # 逐行读取CSV文件\n",
+    "            for row in tracksMeta_dict_reader:\n",
+    "                numFrames=int(row[\"numFrames\"])\n",
+    "                vclass=row[\"class\"]\n",
+    "                if numFrames>0 and numFrames<1500 and vclass==vc:\n",
+    "                    if Dtype==\"highD\":\n",
+    "                        trackId_list.append(int(row[\"id\"]))\n",
+    "                    else:\n",
+    "                        trackId_list.append(int(row[\"trackId\"]))\n",
+    "                # row是一个列表，包含了当前行的所有数据\n",
+    "        #print(trackId_list) \n",
+    "\n",
+    "        with open(\"/DATA1/rzhou/ika/single_testcases/%(Dtype)s_single_18-29_%(vc)s.csv\" %{'Dtype':Dtype,'vc':vc}, \"a\") as f_single,\\\n",
+    "        open(\"/DATA1/rzhou/ika/%(Dtype)s/data/%(n)02d_tracks.csv\" %{'Dtype':Dtype,'n':n}, mode='r') as f_tracks:\n",
+    "            # 创建csv.reader对象\n",
+    "            tracks_dict_reader = csv.DictReader(f_tracks)\n",
+    "            curId=-1\n",
+    "            # 逐行读取CSV文件\n",
+    "            for row in tracks_dict_reader:\n",
+    "                if Dtype==\"highD\":\n",
+    "                    trackId=int(row[\"id\"])\n",
+    "                    x=float(row[\"x\"])\n",
+    "                    y=float(row[\"y\"])\n",
+    "                else:\n",
+    "                    trackId=int(row[\"trackId\"])\n",
+    "                    try:\n",
+    "                        x=float(row[\"xCenter\"])\n",
+    "                        y=float(row[\"yCenter\"])\n",
+    "                    except(TypeError,ValueError):\n",
+    "                        pass\n",
+    "                if trackId in trackId_list:\n",
+    "                    if trackId!=curId:\n",
+    "                        cur_id_single+=1\n",
+    "                        f_single.write(\"%(id)d,%(x)f,%(y)f\\n\" %{'id':cur_id_single,'x':x,'y':y})\n",
+    "                        curId=trackId\n",
+    "                    else:\n",
+    "                        f_single.write(\"%(id)d,%(x)f,%(y)f\\n\" %{'id':cur_id_single,'x':x,'y':y})\n",
+    "                \n",
+    "            \n",
+    "        "
+   ]
   },
   {
    "cell_type": "code",
@@ -225,35 +237,13 @@
     "            duration=float(row[6])\n",
     "            num_states=int(duration*float(row[2]))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3ff41a86",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#clear the text first\n",
-    "with open(\"/DATA1/rzhou/ika/single_testcases/%(Dtype)s_single.csv\" %{'Dtype':Dtype}, \"w\") as f:\n",
-    "        f.truncate(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "21e7126e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"/DATA1/rzhou/ika/single_testcases/%(Dtype)s_single.csv\" %{'Dtype':Dtype}, \"w\") as f_single:"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "base",
    "language": "python",
-   "name": "base"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -265,7 +255,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
