--- a/data_process_timegan/single_case/single_vehicle_data.ipynb
+++ b/data_process_timegan/single_case/single_vehicle_data.ipynb
@@ -2,21 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bf24c6ef",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mFailed to start the Kernel. \n",
-      "\u001b[1;31mImportError: /home/rzhou/miniconda3/lib/python3.11/lib-dynload/_sqlite3.cpython-311-x86_64-linux-gnu.so: undefined symbol: sqlite3_deserialize. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -149,27 +138,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "7bb96933",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "car\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "bicycle\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "pedestrian\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "truck_bus\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n"
+     ]
+    }
+   ],
    "source": [
-    "cur_id_single=0\n",
     "Dtype=\"inD\"\n",
     "\n",
     "if Dtype==\"highD\":\n",
-    "    vclasses=[\"car\", \"bicycle\", \"pedestrian\", \"truck_bus\"]\n",
-    "else:\n",
     "    vclasses=[\"Car\", \"Truck\"]\n",
-    "    \n",
-    "for vc in vclasses:    \n",
+    "else:\n",
+    "    vclasses=[\"car\", \"bicycle\", \"pedestrian\", \"truck_bus\"]\n",
+    "\n",
+    "for vc in vclasses:  \n",
+    "    print(vc)\n",
     "    with open(\"/DATA1/rzhou/ika/single_testcases/%(Dtype)s_single_18-29_%(vc)s.csv\" %{'Dtype':Dtype,'vc':vc}, \"w\") as f_single:\n",
     "        f_single.truncate(0)\n",
     "        f_single.write(\"trackID,x,y\\n\")\n",
-    "        \n",
-    "for n in range(18,30):\n",
-    "    print(n)\n",
-    "    for vc in vclasses:\n",
+    "    cur_id_single=0      \n",
+    "    for n in range(18,30):\n",
+    "        print(n)\n",
     "        trackId_list=[]\n",
     "        with open(\"/DATA1/rzhou/ika/%(Dtype)s/data/%(n)02d_tracksMeta.csv\" %{'Dtype':Dtype,'n':n}, mode='r') as f_tracksMeta:\n",
     "            # 创建csv.DictReader对象\n",
