fix the bug for if some cases are empty (no track in the whole seqlength)

--- a/data_process_diffts/merge_maps.ipynb
+++ b/data_process_diffts/merge_maps.ipynb
@@ -18,8 +18,8 @@
     "    for file_path in csv_files:\n",
     "        df = pd.read_csv(file_path)\n",
     "        \n",
-    "        # 假设每个case包含1000行\n",
-    "        rows_per_case = 1000\n",
+    "        # 假设每个case包含1000行(要改)\n",
+    "        rows_per_case = 500\n",
     "        num_cases_in_file = len(df) // rows_per_case\n",
     "        \n",
     "        # 更新caseID\n",
@@ -32,7 +32,7 @@
     "    \n",
     "    merged_df.to_csv(os.path.join(folder_path, 'merged_cases.csv'), index=False)\n",
     "\n",
-    "folder_path = '/DATA1/rzhou/ika/multi_testcases/rounD/reduced/nfea60'\n",
+    "folder_path = '/DATA1/rzhou/ika/multi_testcases/rounD/reduced/nfea30'\n",
     "merge_csv_files(folder_path)\n"
    ]
   },
