--- a/data_process_diffts/reduce_num_features.ipynb
+++ b/data_process_diffts/reduce_num_features.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,29 +34,30 @@
     "Dtype = \"rounD\"\n",
     "# Map of n to its corresponding num_feature\n",
     "num_features_map = {\n",
-    "    2: 112,\n",
-    "    3: 102,\n",
-    "    4: 106,\n",
-    "    5: 106,\n",
-    "    6: 100,\n",
-    "    7: 102,\n",
-    "    8: 100\n",
+    "    2: 80,\n",
+    "    3: 78,\n",
+    "    4: 72,\n",
+    "    5: 74,\n",
+    "    6: 72,\n",
+    "    7: 70,\n",
+    "    8: 68\n",
     "}\n",
+    "seq_length=500\n",
     "\n",
     "for n in range(2, 9):\n",
     "    # Retrieve the correct num_feature for the current n\n",
     "    num_feature = num_features_map[n]\n",
     "    \n",
     "    # Read the CSV file\n",
-    "    df = pd.read_csv(f\"/DATA1/rzhou/ika/multi_testcases/{Dtype}/ori/{Dtype}_map{n:02d}_interval100_seq1000_nfea{num_feature}.csv\")\n",
+    "    df = pd.read_csv(f\"/DATA1/rzhou/ika/multi_testcases/{Dtype}/ori/seq{seq_length}/{Dtype}_map{n:02d}_interval100_seq{seq_length}_nfea{num_feature}.csv\")\n",
     "\n",
     "    # Assuming you want to keep columns related to 50 tracks (100 columns for x and y + 1 for caseID)\n",
-    "    num_tracks = 30\n",
+    "    num_tracks = 15\n",
     "    df_trimmed = df.iloc[:, :(num_tracks * 2) + 1]  # +1 to include caseID column\n",
     "\n",
     "    new_num_features = num_tracks * 2\n",
     "    # Save the trimmed dataframe to a new CSV file\n",
-    "    df_trimmed.to_csv(f\"/DATA1/rzhou/ika/multi_testcases/{Dtype}/reduced/nfea60/{Dtype}_map{n:02d}_interval100_seq1000_reduced_nfea{new_num_features}.csv\", index=False)\n"
+    "    df_trimmed.to_csv(f\"/DATA1/rzhou/ika/multi_testcases/{Dtype}/reduced/nfea{new_num_features}/{Dtype}_map{n:02d}_interval100_seq{seq_length}_reduced_nfea{new_num_features}.csv\", index=False)\n"
    ]
   },
   {
