process rounD nopad and pad0 for map 09-23

--- a/data_process_diffts/reduce_num_features.ipynb
+++ b/data_process_diffts/reduce_num_features.ipynb
@@ -25,31 +25,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "\n",
+    "startmap=9\n",
+    "endmap=23\n",
     "Dtype = \"rounD\"\n",
     "# Map of n to its corresponding num_feature\n",
+    "# num_features_map = {\n",
+    "#     2: 80,\n",
+    "#     3: 78,\n",
+    "#     4: 72,\n",
+    "#     5: 74,\n",
+    "#     6: 72,\n",
+    "#     7: 70,\n",
+    "#     8: 68\n",
+    "# }\n",
     "num_features_map = {\n",
-    "    2: 80,\n",
-    "    3: 78,\n",
-    "    4: 72,\n",
-    "    5: 74,\n",
-    "    6: 72,\n",
-    "    7: 70,\n",
-    "    8: 68\n",
+    "    9: 70, 10: 76, 11: 58, 12: 56, 13: 52, 14: 58, 15: 56, 16:60, 17:68, 18:66,19:72,20:68,21:64,22:68,23:56\n",
     "}\n",
     "seq_length=500\n",
+    "interval=100\n",
     "\n",
-    "for n in range(2, 9):\n",
+    "for n in range(startmap, endmap+1):\n",
     "    # Retrieve the correct num_feature for the current n\n",
     "    num_feature = num_features_map[n]\n",
     "    \n",
     "    # Read the CSV file\n",
-    "    df = pd.read_csv(f\"/DATA1/rzhou/ika/multi_testcases/{Dtype}/ori/seq{seq_length}/{Dtype}_map{n:02d}_interval100_seq{seq_length}_nfea{num_feature}.csv\")\n",
+    "    df = pd.read_csv(f\"/DATA1/rzhou/ika/multi_testcases/{Dtype}/ori/seq{seq_length}/{startmap:02d}-{endmap:02d}/{Dtype}_map{n:02d}_interval{interval}_seq{seq_length}_nfea{num_feature}.csv\")\n",
     "\n",
     "    # Assuming you want to keep columns related to 50 tracks (100 columns for x and y + 1 for caseID)\n",
     "    num_tracks = 15\n",
@@ -57,7 +62,7 @@
     "\n",
     "    new_num_features = num_tracks * 2\n",
     "    # Save the trimmed dataframe to a new CSV file\n",
-    "    df_trimmed.to_csv(f\"/DATA1/rzhou/ika/multi_testcases/{Dtype}/reduced/nfea{new_num_features}/{Dtype}_map{n:02d}_interval100_seq{seq_length}_reduced_nfea{new_num_features}.csv\", index=False)\n"
+    "    df_trimmed.to_csv(f\"/DATA1/rzhou/ika/multi_testcases/{Dtype}/reduced/nfea{new_num_features}/{startmap:02d}-{endmap:02d}/{Dtype}_map{n:02d}_interval100_seq{seq_length}_reduced_nfea{new_num_features}.csv\", index=False)\n"
    ]
   },
   {
